# test-monorepo

./: .gitignore  Cargo.toml  SCENARIOS.md  go.work  package-lock.json  package.json  pnpm-workspace.yaml  pyproject.toml
admin/: package.json
admin-panel/: index.js  package-lock.json  package.json
apps/dashboard/: package-lock.json  package.json
apps/mobile/: package-lock.json  package.json
apps/web/: package-lock.json  package.json
apps/web-admin/: package-lock.json  package.json
backend/api/: pyproject.toml
backend/workers/: pyproject.toml
clients/internal/portal/: package.json  pnpm-lock.yaml
crates/core/: Cargo.toml
crates/utils/: Cargo.toml
dotnet/WebApp/: WebApp.csproj  packages.lock.json
experiments/dual-lock/: package-lock.json  package.json
infra/: main.tf
java/gradle-app/: build.gradle  gradle.lockfile
java/spring-app/: pom.xml
legacy/php-app/: composer.json
legacy/ruby-app/: Gemfile
scripts/etl/: Pipfile
scripts/ml-pipeline/: pyproject.toml  some.py
services/api/: go.mod  go.sum  main.go
services/auth/: package-lock.json  package.json  pyproject.toml  requirements.txt
services/gateway/: go.mod  main.go
tools/bundler/: package.json
